# Sensor_Networks

./: .gitignore  README.md  accel_8c.html  accel_8c.js  accel_8h.html  accel_8h.js  accel_8h_source.html  adc_8c.html  adc_8c.js  adc_8h.html  adc_8h.js  adc_8h_source.html  annotated.html  annotated_dup.js  classes.html  color_8c.html  color_8c.js  color_8h.html  color_8h.js  color_8h_source.html  dir_1b2b3025760fa230ec416a443f96fa32.html  dir_1b2b3025760fa230ec416a443f96fa32.js  dir_4fa7eb7783f6e098f5b0220d6b846cac.html  dir_4fa7eb7783f6e098f5b0220d6b846cac.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7349e89ef19c117195f8e371603e1b1f.html  dir_7349e89ef19c117195f8e371603e1b1f.js  dir_73556edcf9b1a954f0c8f5a9f1482e01.html  dir_73556edcf9b1a954f0c8f5a9f1482e01.js  dir_b91aa4d92f73916c1f856fa4f2c347fb.html  dir_b91aa4d92f73916c1f856fa4f2c347fb.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  gps_8c.html  gps_8c.js  (+53 more)
orange-challenge/: SN_Orange_C1.pptx  SN_Orange_C2.pptx
plant_monitoring_system/: CMakeLists.txt  Doxyfile  main.md
plant_monitoring_system_phase3/: CMakeLists.txt  Doxyfile
plant_monitoring_system_phase3/confs/: prj_nucleo_wl55jc.conf
plant_monitoring_system_phase3/lua/: phase3.lua
plant_monitoring_system_phase3/src/: main.c  main.h  sensors_thread.c  sensors_thread.h
plant_monitoring_system_phase3/src/sensors/i2c/: accel.c  accel.h  color.h  i2c.c  i2c.h
plant_monitoring_system_phase3/src/sensors/led/: rgb_led.c
report/: acronyms.tex  config.tex  (+3 more)
(+136 files in other folders)
